# first-agent

./: .env.example  .gitignore  LANGFUSE_SETUP.md  pyproject.toml  test_api.py  test_heroes.py  test_hybrid_architecture.py  test_llm_integration.py  test_refresh.py  test_request.json  test_simple.py
DotaHelperAgent/: .env.example  requirements-optional.txt  requirements.txt
DotaHelperAgent/analyzers/: hero_analyzer.py
DotaHelperAgent/cache/: cache_manager.py
DotaHelperAgent/config/: langfuse_config.yaml  llm_config.yaml
DotaHelperAgent/core/: agent_controller.py  config.py  goal_planner.py  tool_registry.py
DotaHelperAgent/docs/: ARCHITECTURE_ANALYSIS.md  P0_IMPLEMENTATION_PLAN.md  P0_IMPLEMENTATION_REPORT.md
DotaHelperAgent/managers/: __init__.py  matchup_data_manager.py
DotaHelperAgent/memory/: memory.py
DotaHelperAgent/tests/: README.md  test_trace_fix.py  test_trace_optimization.py  test_trace_persistence.py  test_trace_persistence_simple.py  test_trace_simple.py
DotaHelperAgent/tools/: search_tools.py
DotaHelperAgent/utils/: api_client.py  background_loader.py  langfuse_adapter.py  langfuse_config.py  log_config.py  memory_log_handler.py  trace_context.py  trace_persistence.py
DotaHelperAgent/web/: app.py  index.html
agents/DotaHelperAgent/: AGENT_ANALYSIS_REPORT.md  AGENT_ARCHITECTURE_COMPLETE.md  ARCHITECTURE_ANALYSIS.md  README.md  __init__.py
app/: config.py
cache/: cache.db
config/: settings.py
examples/: langchain_with_langfuse.py  langfuse_example.py  test_lmstudio.py  weather_example.py
tests/: test_config.py
(+257 files in other folders)
